Minor cleanups.
See the code for details and ping me if anything is unclear.